LAParser.py
# Generated from LA.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LAParser ( Parser ):

    grammarFileName = "LA.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'algoritmo'", "'fim_algoritmo'", "'declare'", 
                     "'constante'", "':'", "'='", "'tipo'", "','", "'.'", 
                     "'['", "']'", "'literal'", "'inteiro'", "'real'", "'logico'", 
                     "'^'", "'verdadeiro'", "'falso'", "'registro'", "'fim_registro'", 
                     "'procedimento'", "'('", "')'", "'fim_procedimento'", 
                     "'funcao'", "'fim_funcao'", "'var'", "'leia'", "'escreva'", 
                     "'se'", "'entao'", "'senao'", "'fim_se'", "'caso'", 
                     "'seja'", "'fim_caso'", "'para'", "'<-'", "'ate'", 
                     "'faca'", "'fim_para'", "'enquanto'", "'fim_enquanto'", 
                     "'retorne'", "'..'", "'-'", "'+'", "'*'", "'/'", "'%'", 
                     "'&'", "'<>'", "'>='", "'<='", "'>'", "'<'", "'nao'", 
                     "'ou'", "'e'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'\\''" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "NUM_INT", "NUM_REAL", "Digito", "IDENT", "Comentario", 
                      "Nao_Fechado", "CADEIA", "Literal_Nao_Fechada", "ESC_SEQ", 
                      "WS", "ERR" ]

    RULE_programa = 0
    RULE_declaracoes = 1
    RULE_decl_local_global = 2
    RULE_declaracao_local = 3
    RULE_declaracao_variavel = 4
    RULE_declaracao_constante = 5
    RULE_declaracao_tipo = 6
    RULE_variavel = 7
    RULE_identificador = 8
    RULE_dimensao = 9
    RULE_tipo = 10
    RULE_tipo_basico = 11
    RULE_tipo_basico_ident = 12
    RULE_tipo_estendido = 13
    RULE_valor_constante = 14
    RULE_registro = 15
    RULE_declaracao_global = 16
    RULE_parametro = 17
    RULE_parametros = 18
    RULE_corpo = 19
    RULE_cmd = 20
    RULE_cmdLeia = 21
    RULE_cmdEscreva = 22
    RULE_cmdSe = 23
    RULE_cmdCaso = 24
    RULE_cmdPara = 25
    RULE_cmdEnquanto = 26
    RULE_cmdFaca = 27
    RULE_cmdAtribuicao = 28
    RULE_cmdChamada = 29
    RULE_cmdRetorne = 30
    RULE_selecao = 31
    RULE_item_selecao = 32
    RULE_constantes = 33
    RULE_numero_intervalo = 34
    RULE_op_unario = 35
    RULE_exp_aritmetica = 36
    RULE_termo = 37
    RULE_fator = 38
    RULE_op1 = 39
    RULE_op2 = 40
    RULE_op3 = 41
    RULE_parcela = 42
    RULE_parcela_unario = 43
    RULE_parcela_nao_unario = 44
    RULE_exp_relacional = 45
    RULE_op_relacional = 46
    RULE_expressao = 47
    RULE_termo_logico = 48
    RULE_fator_logico = 49
    RULE_parcela_logica = 50
    RULE_op_logico_1 = 51
    RULE_op_logico_2 = 52

    ruleNames =  [ "programa", "declaracoes", "decl_local_global", "declaracao_local", 
                   "declaracao_variavel", "declaracao_constante", "declaracao_tipo", 
                   "variavel", "identificador", "dimensao", "tipo", "tipo_basico", 
                   "tipo_basico_ident", "tipo_estendido", "valor_constante", 
                   "registro", "declaracao_global", "parametro", "parametros", 
                   "corpo", "cmd", "cmdLeia", "cmdEscreva", "cmdSe", "cmdCaso", 
                   "cmdPara", "cmdEnquanto", "cmdFaca", "cmdAtribuicao", 
                   "cmdChamada", "cmdRetorne", "selecao", "item_selecao", 
                   "constantes", "numero_intervalo", "op_unario", "exp_aritmetica", 
                   "termo", "fator", "op1", "op2", "op3", "parcela", "parcela_unario", 
                   "parcela_nao_unario", "exp_relacional", "op_relacional", 
                   "expressao", "termo_logico", "fator_logico", "parcela_logica", 
                   "op_logico_1", "op_logico_2" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    NUM_INT=60
    NUM_REAL=61
    Digito=62
    IDENT=63
    Comentario=64
    Nao_Fechado=65
    CADEIA=66
    Literal_Nao_Fechada=67
    ESC_SEQ=68
    WS=69
    ERR=70

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracoes(self):
            return self.getTypedRuleContext(LAParser.DeclaracoesContext,0)


        def corpo(self):
            return self.getTypedRuleContext(LAParser.CorpoContext,0)


        def EOF(self):
            return self.getToken(LAParser.EOF, 0)

        def getRuleIndex(self):
            return LAParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = LAParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.declaracoes()
            self.state = 107
            self.match(LAParser.T__0)
            self.state = 108
            self.corpo()
            self.state = 109
            self.match(LAParser.T__1)
            self.state = 110
            self.match(LAParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracoesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl_local_global(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAParser.Decl_local_globalContext)
            else:
                return self.getTypedRuleContext(LAParser.Decl_local_globalContext,i)


        def getRuleIndex(self):
            return LAParser.RULE_declaracoes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracoes" ):
                listener.enterDeclaracoes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracoes" ):
                listener.exitDeclaracoes(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracoes" ):
                return visitor.visitDeclaracoes(self)
            else:
                return visitor.visitChildren(self)




    def declaracoes(self):

        localctx = LAParser.DeclaracoesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaracoes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 35651736) != 0):
                self.state = 112
                self.decl_local_global()
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_local_globalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao_local(self):
            return self.getTypedRuleContext(LAParser.Declaracao_localContext,0)


        def declaracao_global(self):
            return self.getTypedRuleContext(LAParser.Declaracao_globalContext,0)


        def getRuleIndex(self):
            return LAParser.RULE_decl_local_global

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl_local_global" ):
                listener.enterDecl_local_global(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl_local_global" ):
                listener.exitDecl_local_global(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl_local_global" ):
                return visitor.visitDecl_local_global(self)
            else:
                return visitor.visitChildren(self)




    def decl_local_global(self):

        localctx = LAParser.Decl_local_globalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl_local_global)
        try:
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 4, 7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.declaracao_local()
                pass
            elif token in [21, 25]:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.declaracao_global()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_localContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao_variavel(self):
            return self.getTypedRuleContext(LAParser.Declaracao_variavelContext,0)


        def declaracao_constante(self):
            return self.getTypedRuleContext(LAParser.Declaracao_constanteContext,0)


        def declaracao_tipo(self):
            return self.getTypedRuleContext(LAParser.Declaracao_tipoContext,0)


        def getRuleIndex(self):
            return LAParser.RULE_declaracao_local

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_local" ):
                listener.enterDeclaracao_local(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_local" ):
                listener.exitDeclaracao_local(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracao_local" ):
                return visitor.visitDeclaracao_local(self)
            else:
                return visitor.visitChildren(self)




    def declaracao_local(self):

        localctx = LAParser.Declaracao_localContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaracao_local)
        try:
            self.state = 125
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.declaracao_variavel()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.declaracao_constante()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 124
                self.declaracao_tipo()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_variavelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variavel(self):
            return self.getTypedRuleContext(LAParser.VariavelContext,0)


        def getRuleIndex(self):
            return LAParser.RULE_declaracao_variavel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_variavel" ):
                listener.enterDeclaracao_variavel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_variavel" ):
                listener.exitDeclaracao_variavel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracao_variavel" ):
                return visitor.visitDeclaracao_variavel(self)
            else:
                return visitor.visitChildren(self)




    def declaracao_variavel(self):

        localctx = LAParser.Declaracao_variavelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaracao_variavel)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(LAParser.T__2)
            self.state = 128
            self.variavel()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_constanteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(LAParser.IDENT, 0)

        def tipo_basico(self):
            return self.getTypedRuleContext(LAParser.Tipo_basicoContext,0)


        def valor_constante(self):
            return self.getTypedRuleContext(LAParser.Valor_constanteContext,0)


        def getRuleIndex(self):
            return LAParser.RULE_declaracao_constante

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_constante" ):
                listener.enterDeclaracao_constante(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_constante" ):
                listener.exitDeclaracao_constante(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracao_constante" ):
                return visitor.visitDeclaracao_constante(self)
            else:
                return visitor.visitChildren(self)




    def declaracao_constante(self):

        localctx = LAParser.Declaracao_constanteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_declaracao_constante)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(LAParser.T__3)
            self.state = 131
            self.match(LAParser.IDENT)
            self.state = 132
            self.match(LAParser.T__4)
            self.state = 133
            self.tipo_basico()
            self.state = 134
            self.match(LAParser.T__5)
            self.state = 135
            self.valor_constante()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_tipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(LAParser.IDENT, 0)

        def tipo(self):
            return self.getTypedRuleContext(LAParser.TipoContext,0)


        def getRuleIndex(self):
            return LAParser.RULE_declaracao_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_tipo" ):
                listener.enterDeclaracao_tipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_tipo" ):
                listener.exitDeclaracao_tipo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracao_tipo" ):
                return visitor.visitDeclaracao_tipo(self)
            else:
                return visitor.visitChildren(self)




    def declaracao_tipo(self):

        localctx = LAParser.Declaracao_tipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_declaracao_tipo)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(LAParser.T__6)
            self.state = 138
            self.match(LAParser.IDENT)
            self.state = 139
            self.match(LAParser.T__4)
            self.state = 140
            self.tipo()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariavelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identificador(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAParser.IdentificadorContext)
            else:
                return self.getTypedRuleContext(LAParser.IdentificadorContext,i)


        def tipo(self):
            return self.getTypedRuleContext(LAParser.TipoContext,0)


        def getRuleIndex(self):
            return LAParser.RULE_variavel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariavel" ):
                listener.enterVariavel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariavel" ):
                listener.exitVariavel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariavel" ):
                return visitor.visitVariavel(self)
            else:
                return visitor.visitChildren(self)




    def variavel(self):

        localctx = LAParser.VariavelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_variavel)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.identificador()
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==8:
                self.state = 143
                self.match(LAParser.T__7)
                self.state = 144
                self.identificador()
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 150
            self.match(LAParser.T__4)
            self.state = 151
            self.tipo()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentificadorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(LAParser.IDENT)
            else:
                return self.getToken(LAParser.IDENT, i)

        def dimensao(self):
            return self.getTypedRuleContext(LAParser.DimensaoContext,0)


        def getRuleIndex(self):
            return LAParser.RULE_identificador

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentificador" ):
                listener.enterIdentificador(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentificador" ):
                listener.exitIdentificador(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentificador" ):
                return visitor.visitIdentificador(self)
            else:
                return visitor.visitChildren(self)




    def identificador(self):

        localctx = LAParser.IdentificadorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_identificador)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(LAParser.IDENT)
            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9:
                self.state = 154
                self.match(LAParser.T__8)
                self.state = 155
                self.match(LAParser.IDENT)
                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 161
            self.dimensao()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp_aritmetica(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAParser.Exp_aritmeticaContext)
            else:
                return self.getTypedRuleContext(LAParser.Exp_aritmeticaContext,i)


        def getRuleIndex(self):
            return LAParser.RULE_dimensao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDimensao" ):
                listener.enterDimensao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDimensao" ):
                listener.exitDimensao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDimensao" ):
                return visitor.visitDimensao(self)
            else:
                return visitor.visitChildren(self)




    def dimensao(self):

        localctx = LAParser.DimensaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_dimensao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 163
                self.match(LAParser.T__9)
                self.state = 164
                self.exp_aritmetica()
                self.state = 165
                self.match(LAParser.T__10)
                self.state = 171
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def registro(self):
            return self.getTypedRuleContext(LAParser.RegistroContext,0)


        def tipo_estendido(self):
            return self.getTypedRuleContext(LAParser.Tipo_estendidoContext,0)


        def getRuleIndex(self):
            return LAParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo" ):
                return visitor.visitTipo(self)
            else:
                return visitor.visitChildren(self)




    def tipo(self):

        localctx = LAParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_tipo)
        try:
            self.state = 174
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19]:
                self.enterOuterAlt(localctx, 1)
                self.state = 172
                self.registro()
                pass
            elif token in [12, 13, 14, 15, 16, 63]:
                self.enterOuterAlt(localctx, 2)
                self.state = 173
                self.tipo_estendido()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tipo_basicoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LAParser.RULE_tipo_basico

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo_basico" ):
                listener.enterTipo_basico(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo_basico" ):
                listener.exitTipo_basico(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo_basico" ):
                return visitor.visitTipo_basico(self)
            else:
                return visitor.visitChildren(self)




    def tipo_basico(self):

        localctx = LAParser.Tipo_basicoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_tipo_basico)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 61440) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tipo_basico_identContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo_basico(self):
            return self.getTypedRuleContext(LAParser.Tipo_basicoContext,0)


        def IDENT(self):
            return self.getToken(LAParser.IDENT, 0)

        def getRuleIndex(self):
            return LAParser.RULE_tipo_basico_ident

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo_basico_ident" ):
                listener.enterTipo_basico_ident(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo_basico_ident" ):
                listener.exitTipo_basico_ident(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo_basico_ident" ):
                return visitor.visitTipo_basico_ident(self)
            else:
                return visitor.visitChildren(self)




    def tipo_basico_ident(self):

        localctx = LAParser.Tipo_basico_identContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_tipo_basico_ident)
        try:
            self.state = 180
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12, 13, 14, 15]:
                self.enterOuterAlt(localctx, 1)
                self.state = 178
                self.tipo_basico()
                pass
            elif token in [63]:
                self.enterOuterAlt(localctx, 2)
                self.state = 179
                self.match(LAParser.IDENT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

